feat : #40324 task completed

--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -40,13 +41,157 @@
       </div>
     </div>
     <div class="co__body">
-      <div class="co__body--left">
-        Payment Block
+      <div class="co__body--wallet">
+        <div class="co__body--wallet-header">
+          Wallet
+        </div>
+        <div class="co__body--wallet-content">
+          <div class="card">
+            <img src="../images/cards/discover.png " width="100%" alt="discover card" id="discoverCard">
+            <span class="card__text"></span>
+          </div>
+          <div class="card">
+            <img src="../images/cards/mastercard.png" width="100%" alt="master card" id="masterCard">
+            <span class="card__text"></span>
+          </div>
+          <div class="card">
+            <img src="../images/cards/visa.png" width="100%" alt="master card">
+            <span class="card__text"></span>
+          </div>
+        </div>
+        <div class="co__body--newCard-header">
+          New Card
+        </div>
+        <div class="co__body--content">
+          <div class="co__body--newCard-content">
+            <form action="">
+              <input type="text" class="input-box" placeholder="Name on Card">
+              <input type="text" class="input-box" placeholder="XXXX-XXXX-XXXX-XXXX">
+              <input type="text" class="input-box input-half" placeholder="MM/YY">
+              <input type="text" class="input-box input-half" placeholder="CVV">
+              <input type="button" class="btn" value="Continue">
+            </form>
+          </div>
+        </div>
+
+
       </div>
-      <div class="co__body--right">
-        Cart Block
+      <div class="co__body--cart-block">
+        <div class="co__body--cart">
+          <div class="co__body--cart-image">
+            <img src="../images/products/mobile-holder.jpg" class="image-border" width="70%" alt="mobile-holder">
+          </div>
+          <div class="co__body--cart-header">
+            Mobile Holder
+            <br>
+            <div class="co__body--cart-details">
+              <span>Black</span>
+              <br>
+            </div>
+            <div class="co__body--cart-quantity">
+              <span>Quantity: 1</span>
+              <br>
+            </div>
+          </div>
+
+          <span class="cart-price"></span>
+
+        </div>
+        <span class="border-top"></span>
+        <div class="co__body--cart">
+          <div class="co__body--cart-image">
+            <img src="../images/products/rado.jpg" class="image-border" width="70%" alt="mobile-holder">
+          </div>
+          <div class="co__body--cart-header">
+            Rado Watch
+            <br>
+            <div class="co__body--cart-details">
+              <span>Black</span>
+              <br>
+            </div>
+            <div class="co__body--cart-quantity">
+              <span>Quantity: 1</span>
+              <br>
+            </div>
+          </div>
+          <span class="cart-price"></span>
+        </div>
+        <span class="border-top"></span>
+        <div class="co__body--cart">
+          <div class="co__body--cart-image">
+            <img src="../images/products/usb-c-2-micro.jpeg" class="image-border" width="70%" alt="mobile-holder">
+          </div>
+          <div class="co__body--cart-header">
+            c type to micro convertor
+            <br>
+            <div class="co__body--cart-details">
+              <span>Black</span>
+              <br>
+            </div>
+            <div class="co__body--cart-quantity">
+              <span>Quantity: 1</span>
+              <br>
+            </div>
+          </div>
+          <span class="cart-price"></span>
+        </div>
+        <span class="border-top"></span>
+        <div class="co__body--cart">
+          <div class="co__body--cart-image">
+            <img src="../images/products/hard-case.jpg" class="image-border" width="70%" alt="mobile-holder">
+          </div>
+          <div class="co__body--cart-header">
+            mobile case
+            <br>
+            <div class="co__body--cart-details">
+              <span>Black</span>
+              <br>
+            </div>
+            <div class="co__body--cart-quantity">
+              <span>Quantity: 1</span>
+              <br>
+            </div>
+          </div>
+          <span class="cart-price"></span>
+        </div>
+        <div class="co__body--gross">
+          <div class="co__body--gross-total border-top">
+            <div class="co__body--gross-content">
+              Sub total
+            </div>
+            <div class="co__body--gross-price">
+              &dollar;100.00
+            </div>
+          </div>
+          <div class="co__body--gross-total">
+            <div class="co__body--gross-content">
+              Shipping
+            </div>
+            <div class="co__body--gross-price">
+              &dollar;10.00
+            </div>
+          </div>
+          <div class="co__body--gross-total">
+            <div class="co__body--gross-content">
+              Tax
+            </div>
+            <div class="co__body--gross-price">
+              &dollar;5.00
+            </div>
+          </div>
+          <div class="co__body--gross-total border-top">
+              <div class="co__body--gross-content">
+               <b>Total</b>
+              </div>
+              <div class="co__body--gross-price">
+                &dollar;115.00
+              </div>
+            </div>
+        </div>
+
       </div>
     </div>
+
   </div>
 </body>
 
