--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
   <title>Frontend Task 1</title>
   <link rel="stylesheet" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script>
     $(document).ready(function () {
@@ -47,15 +47,15 @@
         </div>
         <div class="co__body--wallet-content">
           <div class="card">
-            <img src="../images/cards/discover.png " width="100%" alt="discover card" id="discoverCard">
+            <img src="./images/cards/discover.png " width="100%" alt="discover card" id="discoverCard">
             <span class="card__text"></span>
           </div>
           <div class="card">
-            <img src="../images/cards/mastercard.png" width="100%" alt="master card" id="masterCard">
+            <img src="./images/cards/mastercard.png" width="100%" alt="master card" id="masterCard">
             <span class="card__text"></span>
           </div>
           <div class="card">
-            <img src="../images/cards/visa.png" width="100%" alt="master card">
+            <img src="./images/cards/visa.png" width="100%" alt="master card">
             <span class="card__text"></span>
           </div>
         </div>
@@ -79,7 +79,7 @@
       <div class="co__body--cart-block">
         <div class="co__body--cart">
           <div class="co__body--cart-image">
-            <img src="../images/products/mobile-holder.jpg" class="image-border" width="70%" alt="mobile-holder">
+            <img src="./images/products/mobile-holder.jpg" class="image-border" width="70%" alt="mobile-holder">
           </div>
           <div class="co__body--cart-header">
             Mobile Holder
@@ -100,7 +100,7 @@
         <span class="border-top"></span>
         <div class="co__body--cart">
           <div class="co__body--cart-image">
-            <img src="../images/products/rado.jpg" class="image-border" width="70%" alt="mobile-holder">
+            <img src="./images/products/rado.jpg" class="image-border" width="70%" alt="mobile-holder">
           </div>
           <div class="co__body--cart-header">
             Rado Watch
@@ -119,7 +119,7 @@
         <span class="border-top"></span>
         <div class="co__body--cart">
           <div class="co__body--cart-image">
-            <img src="../images/products/usb-c-2-micro.jpeg" class="image-border" width="70%" alt="mobile-holder">
+            <img src="./images/products/usb-c-2-micro.jpeg" class="image-border" width="70%" alt="mobile-holder">
           </div>
           <div class="co__body--cart-header">
             c type to micro convertor
@@ -138,7 +138,7 @@
         <span class="border-top"></span>
         <div class="co__body--cart">
           <div class="co__body--cart-image">
-            <img src="../images/products/hard-case.jpg" class="image-border" width="70%" alt="mobile-holder">
+            <img src="./images/products/hard-case.jpg" class="image-border" width="70%" alt="mobile-holder">
           </div>
           <div class="co__body--cart-header">
             mobile case
@@ -180,18 +180,17 @@
             </div>
           </div>
           <div class="co__body--gross-total border-top">
-              <div class="co__body--gross-content">
-               <b>Total</b>
-              </div>
-              <div class="co__body--gross-price">
-                &dollar;115.00
-              </div>
+            <div class="co__body--gross-content">
+              <b>Total</b>
             </div>
+            <div class="co__body--gross-price">
+              &dollar;115.00
+            </div>
+          </div>
         </div>
 
       </div>
     </div>
-
   </div>
 </body>
 
